korney.ivanishin/task-6/artifacts/autofix_linter_output.log
cmd/db/main.go:8:2: import 'github.com/lib/pq' is not allowed from list 'main' (depguard)
	_ "github.com/lib/pq"
	^
cmd/db/main.go:24:9: ineffectual assignment to err (ineffassign)
	names, err := dbService.GetNames()
	       ^
internal/wifi/wi-fi.go:27:2: Consider pre-allocating `addrs` (prealloc)
	var addrs []net.HardwareAddr
	^
internal/db/db_functions.go:11:6: exported: type name will be used as db.DBService by other packages, and that stutters; consider calling this Service (revive)
type DBService struct {
     ^
internal/wifi/wi-fi.go:13:6: exported: type name will be used as wifi.WiFiService by other packages, and that stutters; consider calling this Service (revive)
type WiFiService struct {
     ^
internal/wifi/wi-fi.go:42:6: var-naming: don't use underscores in Go names; var name_list should be nameList (revive)
	var name_list []string
	    ^
internal/db/db_functions.go:24:15: error returned from interface method should be wrapped: sig: func (example_mock/internal/db.Database).Query(query string, args ...any) (*database/sql.Rows, error) (wrapcheck)
		return nil, err
		            ^
internal/db/db_functions.go:33:16: error returned from external package is unwrapped: sig: func (*database/sql.Rows).Scan(dest ...any) error (wrapcheck)
			return nil, err
			            ^
internal/db/db_functions.go:40:15: error returned from external package is unwrapped: sig: func (*database/sql.Rows).Err() error (wrapcheck)
		return nil, err
		            ^
internal/db/db_functions.go:51:15: error returned from interface method should be wrapped: sig: func (example_mock/internal/db.Database).Query(query string, args ...any) (*database/sql.Rows, error) (wrapcheck)
		return nil, err
		            ^
internal/db/db_functions.go:61:16: error returned from external package is unwrapped: sig: func (*database/sql.Rows).Scan(dest ...any) error (wrapcheck)
			return nil, err
			            ^
internal/db/db_functions.go:68:15: error returned from external package is unwrapped: sig: func (*database/sql.Rows).Err() error (wrapcheck)
		return nil, err
		            ^
internal/wifi/wi-fi.go:24:15: error returned from interface method should be wrapped: sig: func (example_mock/internal/wifi.WiFi).Interfaces() ([]*github.com/mdlayher/wifi.Interface, error) (wrapcheck)
		return nil, err
		            ^
internal/wifi/wi-fi.go:39:15: error returned from interface method should be wrapped: sig: func (example_mock/internal/wifi.WiFi).Interfaces() ([]*github.com/mdlayher/wifi.Interface, error) (wrapcheck)
		return nil, err
		            ^
14 issues:
* depguard: 1
* ineffassign: 1
* prealloc: 1
* revive: 3
* wrapcheck: 8
